Cambio de nombre panel noticias

--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -15,7 +15,7 @@
     </form>
   </section>
   <section class="seccion-noticias">
-    <h2 class="titulo-noticias">Noticias Recientes</h2>
+    <h2 class="titulo-noticias">Noticias</h2>
     <div *ngFor="let noticia of noticias" class="tarjeta-noticia">
       <div class="imagen-noticia" *ngIf="noticia.imagen">
         <img [src]="noticia.imagen" alt="Imagen de la noticia">
