Organizando orden que se muestran los elementos en la noticia

--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -59,16 +59,23 @@
   background: #1e40af;
 }
 
+
 .seccion-noticias {
   margin-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
+
 
 .tarjeta-noticia {
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
-  gap: 1.2rem;
+  gap: 0.7rem;
   padding: 1rem 0;
   border-bottom: 1px solid #e5e7eb;
+  width: 100%;
 }
 .tarjeta-noticia:last-child {
   border-bottom: none;
@@ -99,6 +106,7 @@
   color: #6b7280;
 }
 
+
 /* Desktop styles */
 @media (min-width: 700px) {
   .contenedor-blog {
@@ -112,5 +120,10 @@
   }
   .seccion-formulario {
     max-width: 350px;
+  }
+  .seccion-noticias {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
 }
