--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -21,6 +21,7 @@
   font-weight: 600;
   margin-bottom: 1rem;
   color: #222;
+  text-align: center;
 }
 
 .formulario-noticia {
@@ -118,7 +119,7 @@
 
 
 /* Desktop styles */
-@media (min-width: 700px) {
+@media (min-width: 900px) {
   .contenedor-blog {
     flex-direction: column;
     align-items: stretch;
