--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -99,8 +99,8 @@
 }
 
 .imagen-noticia img {
-  width: 80px;
-  height: 80px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
   border-radius: 8px;
   background: #f3f4f6;
@@ -147,5 +147,33 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+  }
+
+  .tarjeta-noticia {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 0.7rem;
+  }
+  .imagen-noticia {
+    width: 100%;
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+  }
+  .imagen-noticia img {
+    width: 100%;
+    height: auto;
+    max-height: 350px;
+    object-fit: contain;
+    object-position: center center;
+    border-radius: 8px;
+    background: #f3f4f6;
+    display: block;
+  }
+  .contenido-noticia {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
