--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -125,7 +125,7 @@
 }
 
 
-/* Desktop styles */
+/* Pantallas Grandes */
 @media (min-width: 900px) {
   .contenedor-blog {
     flex-direction: column;
