Validaciones individuales a los campos del formulario

--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -125,6 +125,12 @@
 }
 
 
+label.required::after {
+content: " *";
+color: red;
+}
+
+
 /* Pantallas Grandes */
 @media (min-width: 900px) {
   .contenedor-blog {
